fix menu support